src/objects/zqu__ZFilter__c.object
<CustomObject>
    <fields>
        <fullName>zqu__FieldSetName__c</fullName>
        <description>The name of the field set containing the fields that will be displayed on this filter.</description>
        <inlineHelpText>The name of the field set containing the fields that will be displayed on this filter.</inlineHelpText>
        <label>Field Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__FilterName__c</fullName>
        <description>The identifier of this filter.</description>
        <inlineHelpText>The identifier of this filter.</inlineHelpText>
        <label>Filter Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__IsSingleColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the filter options are presented in a single-column or double-column fashion.</description>
        <inlineHelpText>Whether or not the filter options are presented in a single-column or double-column fashion.</inlineHelpText>
        <label>Is Single Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__IsSystemGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this filter was automatically generated and should not be deleted.</description>
        <inlineHelpText>If checked, this filter was automatically generated and should not be deleted.</inlineHelpText>
        <label>Is System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ObjectName__c</fullName>
        <description>The name of the object this Filter is applied to.</description>
        <inlineHelpText>The name of the object this Filter is applied to.</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The list object this filter is applied to.</description>
        <inlineHelpText>The list object this filter is applied to.</inlineHelpText>
        <label>List</label>
        <referenceTo>zqu__ZList__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Filter</label>
    <listViews>
        <fullName>Main</fullName>
        <columns>NAME</columns>
        <columns>zqu__FilterName__c</columns>
        <columns>zqu__FieldSetName__c</columns>
        <columns>zqu__ZList__c</columns>
        <columns>zqu__ObjectName__c</columns>
        <filterScope>Everything</filterScope>
        <label>Main</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>ZFilter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>zqu__Filter_Name_Alphanumeric</fullName>
        <active>true</active>
        <description>The filter name field must be alphanumeric only (no whitespace, no special characters, no dot, only numbers / letters / underscores).</description>
        <errorConditionFormula>NOT( REGEX( zqu__FilterName__c , &quot;[a-zA-Z0-9_]+&quot; ) )</errorConditionFormula>
        <errorDisplayField>zqu__FilterName__c</errorDisplayField>
        <errorMessage>The filter name field must be alphanumeric only (no whitespace, no special characters, no dot, only numbers / letters / underscores).</errorMessage>
    </validationRules>
</CustomObject>